--- a/css/index.css
+++ b/css/index.css
@@ -19,6 +19,8 @@ header{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+/**Comienzo navbar **/
+
 .nav{
     display: flex;
     justify-content: space-between;
@@ -97,7 +99,7 @@ header{
         flex-direction: column;
         align-items: center;
         margin-right: 20px;
-        background-color:rgb(7, 105, 233) ;
+        background-color:#242427 ;
         position: fixed;
         left: 0;
         top: 60px;
@@ -128,3 +130,43 @@ header{
 
 }
 
+/** Fin Barra de navegacion **/
+
+.contenedor{
+    width: 90%;
+    max-width: 1000px;
+    margin: 20px auto;
+    display: grid;
+    grid-gap: 20px;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(4, auto);
+}
+
+
+.contenedor > div,
+.contenedor .titulo,
+.contenedor .text-cont,
+.contenedor .pie{
+    background-color:#0060E0 ;
+    padding: 20px;
+    border-radius: 4px;
+}
+
+.contenedor .titulo{
+    background: #12203E;
+    color: #FFF;
+    grid-column-start: 1;
+    grid-column-end: -1;
+}
+
+.contenedor .text-cont{
+    grid-column: 1/3;
+}
+
+.contenedor .puestos{
+    grid-column: 3/4;
+}
+
+.contenedor .pie{
+    grid-column: span 4;
+}
