Fin Estadisticas Responsive

--- a/css/estadisticas.css
+++ b/css/estadisticas.css
@@ -159,15 +159,15 @@ header{
 h1{
     animation-name: mianimacion;
     animation-duration: 30s;
-    position:relative;
+    
 }
 
 
 @keyframes mianimacion {
-    0% {color: white;left: 0; top: 0; }
-    25% {color:springgreen;left: 400px; top: 0;}
-    50% {color: skyblue;left: 0; top: 0;  }
-    100% {color: slateblue;left: 400px; top: 0;}
+    0% {color: white;}
+    25% {color:springgreen; }
+    50% {color: skyblue;}
+    100% {color: slateblue;}
 
 }
 
@@ -248,6 +248,7 @@ p{
 .container .tablas{
     grid-column: 4/5;
     background-color: teal;
+    border-radius: 5px;
 }
 
 .tabla{
@@ -284,3 +285,138 @@ tr:nth-child(even){
     border-radius: 4px;
     grid-column: 1/-1;
 }
+
+@media screen and (max-width: 768px){
+
+  .container{
+      display: flex;
+      justify-content: space-around;
+      flex-direction: column;
+  }
+
+
+  .container .stats{
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+  }
+  .pie{
+    display: flex;
+    justify-content: space-around;
+    flex-direction:column;
+    align-items: center;
+   }
+
+   h1{
+    color: white;
+    }
+
+    img{
+        margin: 0 12px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        width:50%;
+        height: 30%;
+        border-radius: 10px;
+        float: left;
+    }
+    h4{
+        margin-top: 5px;
+        margin-left: 5px;
+        color: white;
+    }
+
+    p{
+        margin-top: 5px;
+        margin-left:5px;
+    }
+
+
+}
+
+
+
+@media screen and (max-width: 360px){
+
+    .container{
+        display: flex;
+        justify-content: space-around;
+        flex-direction: column;
+    }
+  
+  
+    .container .stats{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+    }
+    .pie{
+      display: flex;
+      justify-content: space-around;
+      flex-direction:column;
+      align-items: center;
+     }
+  
+     h1{
+      color: white;
+      }
+
+
+      img{
+        margin: 0 12px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        width: 90%;
+        height: 50%;
+        border-radius: 5px;
+    }
+    #celda1{
+        background-color: #0060E0;
+        border-radius: 5px;
+        margin: 5px ;
+        grid-column: 1/2;
+        padding: 10px;
+    }
+    
+    #celda2{
+        background-color: #0060E0;
+        border-radius: 5px;
+        margin: 5px ;
+        grid-column: 2/3;
+        padding: 10px;
+    }
+    
+    #celda3{
+        background-color: #0060E0;
+        border-radius: 5px;
+        margin: 5px;
+        grid-column: 3/4;
+        padding: 10px;
+    }
+    
+    #celda4{
+        background-color: #0060E0;
+        border-radius: 5px;
+        margin: 5px;
+        grid-column: 1/2;
+        padding: 10px;
+    }
+    
+    #celda5{
+        background-color: #0060E0;
+        border-radius: 5px;
+        margin: 5px ;
+        grid-column: 2/3;
+        padding: 10px;
+    }
+    
+    #celda6{
+        background-color: #0060E0;
+        border-radius: 5px;
+        margin: 5px;
+        grid-column: 3/4;
+        padding: 10px;
+    }
+  
+  }
+
