--- a/css/estadisticas.css
+++ b/css/estadisticas.css
@@ -287,6 +287,9 @@ tr:nth-child(even){
 }
 
 @media screen and (max-width: 768px){
+    body{
+        background-color: #707073;
+    }
 
   .container{
       display: flex;
@@ -337,6 +340,9 @@ tr:nth-child(even){
 
 
 @media screen and (max-width: 360px){
+    body{
+        background-color: #707073;
+    }
 
     .container{
         display: flex;
