--- a/css/inscripcion.css
+++ b/css/inscripcion.css
@@ -135,3 +135,153 @@ header{
 }
 
 /** Fin Barra de navegacion **/
+
+
+.container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, auto);
+    grid-gap: 10px;
+    width: 90%;
+    max-width: 1000px;
+    margin: 20px auto;
+}
+
+
+.container .titulo{
+    grid-column: 1/-1;
+    margin: 10px;
+    background-color: #0060E0;
+    border-radius: 10px;
+}
+
+h1{
+    margin: 10px;
+    background-color: #12203E;
+    padding: 10px;
+    border-radius: 5px;
+    color: white;
+    
+}
+
+h3{
+    margin: 10px;
+    background-color: #12203E;
+    padding: 10px;
+    border-radius: 5px;
+    color: white;
+}
+
+.container #bloque1{
+    grid-column-start: 1;
+    grid-column-end: 2;
+    background-color: #12203E;
+    margin-top: 30px;
+}
+
+.container #bloque2{
+    grid-column-start: 3;
+    grid-column-end: 4;
+    background-color: #12203E;
+    margin-top: 30px;
+    
+}
+
+.container .formulario{
+    color:#12203E;
+    grid-column: 2/3;
+    margin-top: 30px;
+    font-size: 25px;
+    padding: 50px;
+    background-color: #0060E0;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    border-radius: 2px;
+}
+
+
+button{
+    font-size: 20px;
+    margin-left: 50px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    border-radius: 5px;
+    padding: 10px;
+}
+
+
+.pie{
+    display:flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color:#0060E0 ;
+    padding: 20px;
+    border-radius: 4px;
+    grid-column: 1/4;
+    margin-top: 20px;
+}
+
+@media screen and (max-width: 768px){
+
+
+
+    body{
+        background-color: #707073;
+    }
+
+    .container{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        background-color: #707073;
+    }
+
+
+    #bloque1, #bloque2 {
+        display: none;
+    }
+    
+
+  
+  
+    .pie{
+        display: flex;
+        justify-content: space-around;
+        flex-direction:column;
+        align-items: center;
+    }
+
+
+}
+
+
+@media screen and (max-width:360px){
+
+
+
+    body{
+        background-color: #707073;
+    }
+
+    .container{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        background-color: #707073;
+    }
+
+
+    #bloque1, #bloque2 {
+        display: none;
+    }
+    
+
+  
+  
+    .pie{
+        display: flex;
+        justify-content: space-around;
+        flex-direction:column;
+        align-items: center;
+    }
+
+
+}
