--- a/css/inscripcion.css
+++ b/css/inscripcion.css
@@ -80,7 +80,7 @@ header{
 @media screen and (max-width: 768px){
     body{
         padding-top: 70px;
-        background-color: black;
+        background-color: #707073;
     }
 
     header{
@@ -137,151 +137,144 @@ header{
 /** Fin Barra de navegacion **/
 
 
-.container {
+.formulario{
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, auto);
-    grid-gap: 10px;
-    width: 90%;
-    max-width: 1000px;
-    margin: 20px auto;
-}
-
-
-.container .titulo{
-    grid-column: 1/-1;
-    margin: 10px;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+    margin: 40px 200px;
     background-color: #0060E0;
-    border-radius: 10px;
-}
-
-h1{
-    margin: 10px;
-    background-color: #12203E;
-    padding: 10px;
     border-radius: 5px;
-    color: white;
-    
-}
-
-h3{
-    margin: 10px;
-    background-color: #12203E;
-    padding: 10px;
-    border-radius: 5px;
-    color: white;
-}
-
-.container #bloque1{
-    grid-column-start: 1;
-    grid-column-end: 2;
-    background-color: #12203E;
-    margin-top: 30px;
-}
-
-.container #bloque2{
-    grid-column-start: 3;
-    grid-column-end: 4;
-    background-color: #12203E;
-    margin-top: 30px;
-    
-}
-
-.container .formulario{
-    color:#12203E;
-    grid-column: 2/3;
-    margin-top: 30px;
-    font-size: 25px;
     padding: 50px;
-    background-color: #0060E0;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    border-radius: 2px;
 }
 
-
-button{
-    font-size: 20px;
-    margin-left: 50px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    border-radius: 5px;
+.formulario__label{
+    display: block;
+    font-weight: 700;
     padding: 10px;
+    cursor: pointer;
 }
 
 
-.pie{
-    display:flex;
-    justify-content: space-around;
+/* .formulario__grupo-input{
+    position:relative;
+} */
+
+
+.formulario__input{
+    width: 100%;
+    background: #fff;
+    border: 3px solid transparent;
+    border-radius: 3px;
+    height: 45px;
+    line-height:45px ;
+    padding: 0 40px 0 10px;
+    transition: .3s ease all;
+}
+
+.formulario__input:focus{
+    border: 3px solid #0075ff;
+    outline: none;
+    box-shadow: 3px 0px 30px rgba(163, 163, 163, 0.4);
+}
+
+
+.formulario__input-error{
+    font-size: 12px;
+    margin-bottom: 0;
+    display: none;
+}
+
+.formulario__input-error-activo{
+    display: block;
+}
+
+.formulario__validacion-estado{
+    position: absolute;
+    right: 10px;
+    bottom: 15px;
+    z-index: 100;
+    font-size: 16px;
+    opacity: 0;
+}
+
+
+.formulario__mensaje, .formulario__grupo-btn-enviar{
+    grid-column: span 2;
+}
+
+
+.formulario__mensaje{
+    height: 45px;
+    line-height: 45px;
+    background-color: #f66060;
+    padding: 0 15px;
+    border-radius: 3px;
+    display:none;
+}
+
+
+.formulario__mensaje p{
+    margin: 0;
+}
+
+.formulario__grupo-btn-enviar{
+    display: flex;
+    flex-direction: column;
     align-items: center;
-    background-color:#0060E0 ;
-    padding: 20px;
-    border-radius: 4px;
-    grid-column: 1/4;
-    margin-top: 20px;
-}
-
-@media screen and (max-width: 768px){
-
-
-
-    body{
-        background-color: #707073;
-    }
-
-    .container{
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        background-color: #707073;
-    }
-
-
-    #bloque1, #bloque2 {
-        display: none;
-    }
-    
-
-  
-  
-    .pie{
-        display: flex;
-        justify-content: space-around;
-        flex-direction:column;
-        align-items: center;
-    }
-
-
+    margin-top: 50px;
 }
 
 
-@media screen and (max-width:360px){
+.formulario__btn{
+    height: 45px;
+    line-height: 45px;
+    width: 30%;
+    background: #000;
+    color: #fff;
+    font-weight: bold;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+    transition: .1s ease all;
+}
 
 
+.formulario__btn:hover{
+    box-shadow: 3px 0px 30px rgba(163,163,163,1);
+}
 
-    body{
-        background-color: #707073;
+
+/* Estilos pra validacion de iconos */
+
+
+.formulario__grupo-correcto .formulario__validacion-estado {
+    color: #1dd12d;
+    opacity: 1;
+}
+
+.formulario__grupo-incorrecto .formulario__label {
+    color: #bb2929;
+}
+
+.formulario__grupo-incorrecto .formulario__validacion-estado{
+    color: #bb2929;
+    opacity: 1;
+}
+
+
+.formulario__grupo-incorrecto .formulario__input{
+    border: 3px solid #bb2929;
+}
+
+
+@media screen and (max-width:787px){
+    .formulario{
+        grid-template-columns:1fr ;
+        margin: 20px 50px;
     }
 
-    .container{
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        background-color: #707073;
-    }
-
-
-    #bloque1, #bloque2 {
-        display: none;
+    .formulario__mensaje, .formulario__grupo-btn-enviar{
+        grid-column: span 1;
     }
     
-
-  
-  
-    .pie{
-        display: flex;
-        justify-content: space-around;
-        flex-direction:column;
-        align-items: center;
-    }
-
-
 }
