--- a/css/inscripcion.css
+++ b/css/inscripcion.css
@@ -137,6 +137,17 @@ header{
 /** Fin Barra de navegacion **/
 
 
+.titulo {
+    color: white;
+    background-color: #12203E;
+    padding: 20px;
+    border-radius: 5px;
+    margin: 0 10px 0 10px;
+    margin-top: 70px;
+
+}
+
+
 .formulario{
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -157,6 +168,7 @@ header{
 
 /* .formulario__grupo-input{
     position:relative;
+    
 } */
 
 
@@ -179,9 +191,10 @@ header{
 
 
 .formulario__input-error{
-    font-size: 12px;
+    font-size: 16px;
     margin-bottom: 0;
     display: none;
+    color: white;
 }
 
 .formulario__input-error-activo{
@@ -217,6 +230,10 @@ header{
     margin: 0;
 }
 
+.formulario__mensaje-activo {
+	display: block;
+}
+
 .formulario__grupo-btn-enviar{
     display: flex;
     flex-direction: column;
@@ -243,13 +260,43 @@ header{
     box-shadow: 3px 0px 30px rgba(163,163,163,1);
 }
 
+.formulario__mensaje-exito {
+	font-size: 18px;
+	color: #119200;
+	display: none;
+    margin-top: 10px;
+    background-color: whitesmoke;
+}
+
+.formulario__mensaje-exito-activo {
+	display: block;
+}
+
+.pie{
+    display:flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color:#0060E0 ;
+    padding: 20px;
+    border-radius: 4px;
+    grid-column: 1/-1;
+    margin-top: 30px;
+}
 
 /* Estilos pra validacion de iconos */
 
 
-.formulario__grupo-correcto .formulario__validacion-estado {
+.formulario__grupo-correcto .formulario__validacion-estado  {
     color: #1dd12d;
-    opacity: 1;
+    
+}
+
+.formulario__grupo-correcto .formulario__label {
+    color: #1dd12d;
+}
+
+.formulario__grupo-correcto .formulario__input{
+    border: 3px solid #1dd12d;
 }
 
 .formulario__grupo-incorrecto .formulario__label {
@@ -276,5 +323,12 @@ header{
     .formulario__mensaje, .formulario__grupo-btn-enviar{
         grid-column: span 1;
     }
+
+    .pie{
+        display: flex;
+        justify-content: space-around;
+        flex-direction:column;
+        align-items: center;
+       }
     
 }
